[package]
name = "cache_me"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = "0.4.41"
env_logger = "0.11.8"
flate2 = "1.1.1"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.12", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4.27"
md-5 = "0.10.6"
prometheus = "0.14.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
sysinfo = "0.35.1"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.15"
url = "2.5.4"
